# zephyr-training

./: BUILD_GUIDE.md  README.md
apps/01_blink/: CMakeCache.txt  CMakeLists.txt  TUTORIAL.md  prj.conf
apps/02_add_lib/: CMakeLists.txt  README.md
apps/02_add_lib/dts/bindings/: button-driver.yaml
apps/02_add_lib/lib/say_hello/: CMakeLists.txt
apps/02_add_lib/lib/say_hello/include/: say_hello.h
apps/02_add_lib/src/: main.c
apps/03_Kconfig_demo/: CMakeLists.txt  README.md  prj.conf
apps/04_botton/: CMakeLists.txt  Kconfig  README.md  prj.conf
apps/05_adc/: README.md  prj.conf
apps/06_adc_pwm/: CMakeLists.txt  README.md  prj.conf
apps/07_mpu6050/: CMakeLists.txt
apps/07_nunchuk_driver/: CMakeLists.txt  prj.conf
modules/custom_drivers/: CMakeLists.txt  Kconfig
modules/custom_drivers/docs/: 01_zephyr_basics.md  02_device_model.md  03_devicetree_guide.md  04_kconfig_guide.md  05_driver_development.md  06_testing_debugging.md
modules/custom_drivers/drivers/mpu6050/: CMakeLists.txt  Kconfig
modules/custom_drivers/drivers/mpu6050/dts/bindings/: invensense,mpu6050-custom.yaml
modules/custom_drivers/drivers/mpu6050/include/: mpu6050.h
modules/custom_drivers/drivers/mpu6050/src/: mpu6050.c  mpu6050_shell.c  mpu6050_trigger.c
modules/custom_drivers/drivers/spi_advanced/: CMakeLists.txt  Kconfig
modules/custom_drivers/drivers/spi_advanced/dts/bindings/: custom,spi-advanced.yaml
modules/custom_drivers/drivers/spi_advanced/include/: spi_advanced.h
modules/custom_drivers/drivers/spi_advanced/src/: spi_advanced.c  spi_advanced_shell.c
modules/custom_drivers/drivers/uart_advanced/: CMakeLists.txt  Kconfig
modules/custom_drivers/drivers/uart_advanced/dts/bindings/: custom,uart-advanced.yaml
modules/custom_drivers/drivers/uart_advanced/include/: uart_advanced.h
modules/custom_drivers/drivers/uart_advanced/src/: uart_advanced.c  uart_advanced_shell.c
modules/custom_drivers/drivers/ublox_neo_m8n/: CMakeLists.txt  Kconfig
modules/custom_drivers/drivers/ublox_neo_m8n/dts/bindings/: u-blox,neo-m8n.yaml
modules/custom_drivers/drivers/ublox_neo_m8n/include/: ublox_neo_m8n.h
modules/custom_drivers/drivers/ublox_neo_m8n/src/: nmea_parser.c  ublox_neo_m8n.c  ublox_neo_m8n_shell.c
modules/custom_drivers/drivers/ultrasonic/: CMakeLists.txt  Kconfig
modules/custom_drivers/drivers/ultrasonic/dts/bindings/: custom,ultrasonic.yaml
modules/custom_drivers/drivers/ultrasonic/include/: ultrasonic.h
modules/custom_drivers/drivers/ultrasonic/src/: ultrasonic.c  ultrasonic_shell.c
zephyr_app_1/: prj.conf
(+46 files in other folders)
